[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/art/mongus_sheet.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Camera2D.gd" type="Script" id=3]
[ext_resource path="res://assets/art/hand.png" type="Texture" id=4]
[ext_resource path="res://braco.gd" type="Script" id=5]
[ext_resource path="res://assets/art/knockedout.png" type="Texture" id=6]
[ext_resource path="res://assets/art/shooteffect.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "KO1",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "KO2",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 7, 10 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 32.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 12 )
animation = "KO2"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 6 )
shape = SubResource( 13 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 3 )

[node name="braco" type="Position2D" parent="."]
script = ExtResource( 5 )

[node name="effect" type="AnimatedSprite" parent="braco"]
visible = false
position = Vector2( 28.5, -16.5 )
frames = SubResource( 18 )
centered = false

[node name="mao" type="Sprite" parent="braco"]
position = Vector2( 19, 0 )
texture = ExtResource( 4 )

[node name="atk_cd" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="braco/effect" to="." method="_on_effect_animation_finished"]
[connection signal="timeout" from="atk_cd" to="." method="_on_atk_cd_timeout"]
